# astrid

./: .gitignore  README-ui.md  README.md  config.yaml  main.py  pyproject.toml
astrid/: __init__.py  __main__.py  cli.py  config.py  context.py  conversation.py  llm_processor.py  llm_ui.py  llm_ui.py.bak  llm_ui_spinner.py  logging_setup.py  main.py  ptk_turn_ui.py  repl.py  repl_turn_ui.py  settings.py  utils.py
mathoms/: encrypt_env_var.py  gitpython-test.py
mathoms/ui-samples/: nav_bar4.py
ui-samples/: llm-ui.py  nav_bar.py  nav_bar2.py  nav_bar3.py  nav_bar5.py  pick_scenario1.py  tui.py
