[project]
name = "astrid"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm",
    "prompt_toolkit",
    "pyyaml",
    "fastmcp",
    "openai",
    "pydantic",
    "rich",
    "art",
    "GitPython",
    "pycryptodome",
    "build"
]

[project.scripts]
astrid = "astrid.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["astrid"]
